<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">App Feedback</string>
    <string name="title_activity_administartion">Administartion</string>
    <string name="title_activity_about_vvce">About VVCE</string>
    <string name="title_activity_activitiesandmemo">Activities and Memo</string>
    <string name="title_activity_alumni">Alumni</string>
    <string name="title_activity_clubs">Clubs</string>
    <string name="app_name">Namma VVCE</string>
    <string name="address">VidyaVardhaka College of Engineering : III Stage, Gokulum, Near Vijayanagar Water Tank, Contour Road, Mysuru, Karnataka-570002</string>
    <string name="Recent">Recent Activities</string>
    <string name="click.faculty.list">Click Here to View Faculty List</string>
    <string name="faculty.name.designation">Name and Designation</string>
    <string name="qualification">Qualification</string>
    <string name="vvce.vision.mision">Vision of VVCE</string>
    <string name="vvce.mission.head">Missions of VVCE</string>
    <string name="Department">DEPARTMENTS</string>
    <string name="csEngg">Computer Science Engineering</string>
    <string name="isEnggg">Information Science Engineering</string>
    <string name="eeEngg">Electricals &amp; Electronics Engineering</string>
    <string name="ecEngg">Electronics &amp; Communication Engineering</string>
    <string name="meEngg">Mechanical Engineering</string>
    <string name="civilEngg">Civil Engineering</string>
    <string name="mba">MBA</string>
    <string name="tap">Training And Placement</string>
    <string name="about.vvce">About VVCE</string>
    <string name="contactus">Contact Us On</string>
    <string name="Follow">Follow Us On</string>
    <string name="kartikeya.Malimath">Developed by: Kartikeya Malimath and Team. \nCopyright VVCE Mysuru ©</string>
    <string name="noNet">No Internet!</string>
    <string name="faculty.des">556 Certified, Wel-Trained and student friendly Faculties. </string>
    <string name="fest">Many cultural and literary events like Fashion Designing, Voice of VVCE, Computer gaming, Face painting, Dumb Charads, Tshirt Painting, Stunt show and many are conducted as a part of Annual Fest- The VIDYUTH</string>
    <string name="club.des">Many clubs have been initiated for promoting Entrepreneurship skills, Project development skills and all-round development of the students</string>
    <string name="vvce.Des">Description</string>
    <string name="vvce.mission1">• To provide the best teaching - learning environment through competent staff and excellent infrastructure</string>
    <string name="vvce.mission2">• To inculcate professional ethics, leadership qualities, communication and  entrepreneurial skills to meet the societal needs</string>
    <string name="vvce.mission3">• To promote innovation through research and development</string>
    <string name="vvce.mission4">• To strengthen industry-institute interaction for knowledge sharing</string>
    <string name="vvce.vision">VVCE shall be a leading Institution in engineering and management education enabling individuals for significant contribution to the society
    </string>
    <string name="about_college1"> VVCE – A Centre of Excellence in Technical &amp; Management Education
Vidyavardhaka Sangha (VVS) stands as a synonym for quality education in the heritage city of Mysuru. VVS was established in 1949 by great visionaries namely Late Sahukar Channaiah and Late. K. Puttaswamy (Former Minister of Karnataka) to impart quality education to all sections of the society. There are ten educational institutions starting from nursery to engineering college under the aegis of VVS. At present, Sangha is under the able guidance and leadership of Sri Gundappa Gowda, President and Sri P. Vishwanath, Secretary.
    </string>
    <string name="vvce_college2">Vidyavardhaka College of Engineering, popularly referred as VVCE, is one of the most prestigious engineering colleges in Karnataka. Established in 1997, VVCE has grown in leaps and bounds. VVCE is affiliated to Visvesvaraya Technological University (VTU), Belgaum, approved by AICTE, New Delhi and recognized by Govt. of Karnataka. VVCE functions through its Board of Governors constituted as per AICTE guidelines.
    </string>
    <string name="vvce_college3">The college is under the able leadership of Dr. B. Sadashive Gowda as Principal, who has rich experience in industry and education field both in India and abroad. VVCE has a vision to become a centre of excellence in Academics and management education. The campus is equipped with six research centers providing opportunity to work in frontier areas of technology. Faculty members are well qualified, experienced and have great passion for teaching &amp; learning. The faculties provide conducive learning environment empowering students with cutting edge knowledge. The learning environment includes technical seminars, projects, industry visits, entrepreneurial trainings, group discussions besides conventional teaching.
    </string>
    <string name="vvce_college4">The college has taken stringent measures as per AICTE norms to prevent any incidents of ragging.
VVCE has proved itself as one of the best colleges for technical and management education in Karnataka.</string>
    <string name="facility_intake_text">The college has an annual intake of 540 students for Under Graduate courses and 174 students for Post Graduate courses. The college now offers under graduate courses in six disciplines and PG courses in 2 disiplines. The following are the courses offered by the college at present</string>
    <string name="M.tech_CAMS">M.Tech in CAMS</string>
    <string name="M.tech_MchDsgn">M.Tech in Machine Design</string>
    <string name="M.tech_signal">M.Tech in Signal Processing</string>
    <string name="Hostel">Hostel Facilities</string>
    <string name="PE_sports">Physical Education &amp; Sports</string>
    <string name="Transport">Transport Conveyance</string>
    <string name="scholarship">Scholarships and Awards</string>
    <string name="gym">GYM &amp; Fitness Center</string>
    <string name="hostel_des">Separate hostel facilities are available for both boys and girl students with meals and atmost care is taken for security of students</string>
    <string name="PE1">With a firm belief that physical fitness leads to mental fitness, the college encourages various sports and games.
</string>
    <string name="PE2">Sports facilities are provided to the students for both indoor and outdoor games. Various inter college sports tournaments are conducted by the college sports council. The students also take part in various inter collegiate and varsity sports meet.
</string>
    <string name="PE3">The Sports Council consisting of senior staff members and the captains of the College teams organise an Annual Sports and Athletics meet as part of "VIDYUTH" which is an Inter Engineering Colege festival and encourages the students to participate in various VTU Inter collegiate sports activities.
</string>
    <string name="transport">Good number of city buses ply from City Central Bus Stand.
From City – Route Nos. 112, 119, 123, 83, 84, 10, 101, 122, 116 (Volvo).</string>
    <string name="scholar">[A] Fee Concession/Scholarships from Director of Technical Education, Bangalore.\n[1] Fee concession to the students belonging to group 2A, 2B, 3A &amp; 3B students whose parents/guardian income is not more than Rs.11,000/- P.A.\n[2] Fee concession to the SC/ST and category-1 group students whose income is not more than Rs. 1,00,000/- P.A.\n[3] Government of India National Merit Scholarship.\n\n[B] Scholarship from District Social Welfare Office, Mysore District, Mysore.\n[1] Government of India post metric scholarship of scheduled caste and scheduled tribe students.\n\n[C] Scholarship from District Officer for Backward Classes &amp; Minorities, Mysore District, Mysore.\n[1] Post metric scholarship to students belonging to back word classes and minorities.\n\n[E] S.J. Jindal Trust, Jindal – Nigam Tumkur Road, Bangalore\n[1] Award of Scholarship.
</string>
    <string name="gym_des">Well equipped gym located in boys hostel. Trainer to help in fitness of the students</string>
    <string name="cse.faculty.list">CS&amp;E Faculty List</string>
    <string name="csvision.mision">Vision of CS&amp;E Department</string>
    <string name="csmission.head">Missions of CS&amp;E Department</string>
    <string name="cse">Department of CS&amp;E</string>
    <string name="aboutcsehead">About CS&amp;E Department</string>
    <string name="csefaculty">Faculties of CS&amp;E</string>
    <string name="csRavi">Dr. RAVI KUMAR V\n( Professor &amp; HoD )</string>
    <string name="M.Tech.Ph.D.">M.Tech, Ph.D</string>
    <string name="csPOORNIMA">POORNIMA B.G\n( Associate Professor )</string>
    <string name="csPARAMESHA">PARAMESHA.K\n( Associate Professor )</string>
    <string name="M.Tech.CNE.phd">M.Tech.(CNE) (Ph.D)</string>
    <string name="M.Tech.cne">M.Tech.(CNE)</string>
    <string name="M.Tech.cne.Ph.D.cne">M.Tech.CNE,Ph.D(CNE)</string>
    <string name="csPOOJA">POOJA M.R\n( Associate Professor )</string>
    <string name="M.Tech.se.Ph.D">M.Tech.(SE),(Ph.D)</string>
    <string name="csKHASIM">D.KHASIM VALI\n( Associate Professor )</string>
    <string name="M.Tec.Ph.D">M.Tech.(MEM),(Ph.D)</string>
    <string name="csNATESH">NATESH M\n( Associate Professor )</string>
    <string name="M.Tech.Ph.D">M.Tech.(CSE),(Ph.D)</string>
    <string name="csJANHAVI">JANHAVI  V\n( Associate Professor )</string>
    <string name="M.S.Ph.D">M.S.(CN),(Ph.D)</string>
    <string name="csRAVI">RAVI P\n(Assistant Professor)</string>
    <string name="M.Tech.cse.Ph.D">M.Tech.(CSE),(Ph.D)</string>
    <string name="csHAMSAVENI">HAMSAVENI M A\n(Assistant Professor)</string>
    <string name="M.Tech.mem.Ph.D">M.Tech.(MEM),(Ph.D)</string>
    <string name="Mech">Department of Mechanical</string>
    <string name="aboutmech">About Mechanical Department</string>
    <string name="mefaculty">Faculties of Mechanical</string>
    <string name="mechmission1">1. Promote innovative teaching-learning methods to enhance problem solving skills</string>
    <string name="mechmission2">2. Enhance industry-institute interaction for mutual benefit by collaborating with Industries.</string>
    <string name="mechmission3">3. Facilitate research and developmental activities by providing state - of–the- art facilities in the research centers.</string>
    <string name="mechmission4">4. Nurture entrepreneurial skills by establishing incubation center </string>
    <string name="mechmission5">5. Promote Leadership qualities, work culture and professional ethics through overall personality development.</string>
    <string name="mechdes">The Department of Mechanical Engineering was established in 1997 with an intake of 120. The department has grown leaps and bounds since then. Mechanical Department has its own block housing all the laboratories, workshops, and lecture halls and staff rooms. It has a student population of 360 with an annual intake of 90 (since 2009). The department is well equipped with state- of- the- art laboratories, workshops &amp; infrastructural facilities. The machine shop has a CNC lathe besides conventional lathes, milling machines, drilling machines, etc. The department has excellent computational facilities and resources both in terms of hardware and software. The department has 110 computers loaded with a wide range of software Packages.</string>
    <string name="workshop">Well equipped workshops with classic machines like lathe to modern CNC lathe machines to impart practical knowledge with classical machines to modern machines</string>
    <string name="melabs">Well equipped Design labs with 110 systems loaded with wide range of software packages</string>
</resources>