<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wisemensolutions.nammavvce.about_vvce"
    tools:showIn="@layout/app_bar_about_vvce">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/click.faculty.list"
                android:scaleType="centerCrop"
                android:src="@drawable/vvcenight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="Vidyavardhaka College of Engineering and Management"
                android:textColor="@color/white"
                android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_college1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

                </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="VVCE Management"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="8dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/about_college1"
                android:src="@drawable/management"
                android:scaleType="centerCrop"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="AICTE Approved"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="8dp"
                android:background="@color/contact"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contact"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contact"
                android:padding="8dp"
                android:text="@string/vvce_college2"
                android:textColor="@color/white"
                android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Academics"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="8dp"
                android:background="@color/dept"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dept"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dept"
                android:padding="8dp"
                android:text="@string/vvce_college3"
                android:textColor="@color/white"
                android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Anti-Ragging"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="8dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/vvce_college4"
                android:textColor="@color/white"
                android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorheading"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="@string/kartikeya.Malimath"
                android:textColor="@color/white"
                android:textSize="12sp" />

</LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
